Fix some issues with alternatives to court pages
Some of these pages were not showing the error summary.

Collaborative law page was missing the link to find out more.

Tweaked the styling and font size of the side bars so it is a bit smaller. Added the blue bar.

Make the side bar show above the form when on mobile devides, instead of below.

--- a/app/assets/stylesheets/local/misc.scss
+++ b/app/assets/stylesheets/local/misc.scss
@@ -11,6 +11,7 @@
 
 .app-sidebar-grey {
   background: govuk-colour("light-grey");
+  margin-bottom: govuk-spacing(5);
 }
 
 .app-sidebar-blue-bar {
